[package]
name = "quic-rs-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
colored = "3.0.0"
quinn = "0.11.7"
rcgen = "0.13.2"
rustls = "0.23.25"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "time"] }

[[example]]
name = "basic-genkey"
path = "basic/key_gen.rs"

[[example]]
name = "basic-server"
path = "basic/server.rs"

[[example]]
name = "basic-client"
path = "basic/client.rs"


[[example]]
name = "alpn-genkey"
path = "alpn/key_gen.rs"

[[example]]
name = "alpn-server"
path = "alpn/server.rs"

[[example]]
name = "alpn-client-h1"
path = "alpn/client_h1.rs"

[[example]]
name = "alpn-client-h2"
path = "alpn/client_h2.rs"

[[example]]
name = "alpn-client-no-alpn"
path = "alpn/client_no_alpn.rs"

[[example]]
name = "alpn-client-h3"
path = "alpn/client_h3.rs"