[package]
name = "quic-rs-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
colored = "3.0.0"
hmac = "0.12.1"
quinn = "0.11.7"
rand = "0.9.0"
rcgen = "0.13.2"
rustls = "0.23.25"
serde = { version="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "time"] }

[[example]]
name = "basic-genkey"
path = "basic/key_gen.rs"

[[example]]
name = "basic-server"
path = "basic/server.rs"

[[example]]
name = "basic-client"
path = "basic/client.rs"


[[example]]
name = "alpn-genkey"
path = "alpn/key_gen.rs"

[[example]]
name = "alpn-server"
path = "alpn/server.rs"

[[example]]
name = "alpn-client-h1"
path = "alpn/client_h1.rs"

[[example]]
name = "alpn-client-h2"
path = "alpn/client_h2.rs"

[[example]]
name = "alpn-client-no-alpn"
path = "alpn/client_no_alpn.rs"

[[example]]
name = "alpn-client-h3"
path = "alpn/client_h3.rs"


[[example]]
name = "session-genkey"
path = "session/key_gen.rs"

[[example]]
name = "session-server"
path = "session/server.rs"

[[example]]
name = "session-client"
path = "session/client.rs"

[[example]]
name = "datagram-genkey"
path = "datagram/key_gen.rs"

[[example]]
name = "datagram-server"
path = "datagram/server.rs"

[[example]]
name = "datagram-client"
path = "datagram/client.rs"

[[example]]
name = "multiplexing-genkey"
path = "multiplexing/key_gen.rs"

[[example]]
name = "multiplexing-server"
path = "multiplexing/server.rs"

[[example]]
name = "multiplexing-client"
path = "multiplexing/client.rs"